// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GuideMenu > GuideMenu snapshots > should match snapshot with default props 1`] = `
<div>
  <button
    aria-controls=:r1:
    aria-expanded=false
    aria-haspopup=dialog
    aria-label=Guides
    class=_button _button--primary _button--sm _button--ghost _popover-trigger
    data-ods=popover-trigger
    data-part=trigger
    data-scope=popover
    data-state=closed
    dir=ltr
    id=popover::r0::trigger
    role=button
    tabindex=0
    type=button
  >
    <span
      aria-hidden=true
      class=_icon _icon--book
      data-ods=icon
      role=presentation
    />
    Guides
  </button>
</div>
`;

exports[`GuideMenu > GuideMenu snapshots > should match snapshot with empty items 1`] = `
<div>
  <button
    aria-controls=:r5:
    aria-expanded=false
    aria-haspopup=dialog
    aria-label=Guides
    class=_button _button--primary _button--sm _button--ghost _popover-trigger
    data-ods=popover-trigger
    data-part=trigger
    data-scope=popover
    data-state=closed
    dir=ltr
    id=popover::r4::trigger
    role=button
    tabindex=0
    type=button
  >
    <span
      aria-hidden=true
      class=_icon _icon--book
      data-ods=icon
      role=presentation
    />
    Guides
  </button>
</div>
`;

exports[`GuideMenu > GuideMenu snapshots > should match snapshot with loading state 1`] = `
<div>
  <button
    aria-controls=:r3:
    aria-expanded=false
    aria-haspopup=dialog
    aria-label=Guides
    class=_button _button--primary _button--sm _button--ghost _popover-trigger
    data-ods=popover-trigger
    data-part=trigger
    data-scope=popover
    data-state=closed
    dir=ltr
    disabled=
    id=popover::r2::trigger
    role=button
    tabindex=0
    type=button
  >
    <span
      class=_button__spinner
    >
      <span
        class=_spinner _spinner--neutral _spinner--sm
        data-ods=spinner
        role=none
      >
        <svg
          aria-hidden=true
          class=_spinner__svg
          viewBox=0 0 24 24
          xmlns=http://www.w3.org/2000/svg
        >
          <rect
            fill=none
            height=24
            width=24
          />
          <g
            transform=translate(-237.694 -93.932)
          >
            <path
              d=M-5236.305-4108.069h0v-2a9.011,9.011,0,0,0,9-9,9.01,9.01,0,0,0-9-9,9.01,9.01,0,0,0-9,9h-2a10.928,10.928,0,0,1,3.222-7.779,10.928,10.928,0,0,1,7.778-3.221,10.929,10.929,0,0,1,7.779,3.221,10.932,10.932,0,0,1,3.221,7.777,10.928,10.928,0,0,1-3.221,7.778A10.931,10.931,0,0,1-5236.305-4108.069Z
              transform=translate(5486 4225)
            />
            <circle
              cx=1
              cy=1
              r=1
              transform=translate(248.694 114.932)
            />
            <circle
              cx=1
              cy=1
              r=1
              transform=translate(238.694 104.932)
            />
          </g>
        </svg>
      </span>
    </span>
    <span
      aria-hidden=true
      class=_icon _icon--book
      data-ods=icon
      role=presentation
    />
    Guides
  </button>
</div>
`;

exports[`GuideMenu > GuideMenu snapshots > should match snapshot with single item 1`] = `
<div>
  <button
    aria-controls=:r7:
    aria-expanded=false
    aria-haspopup=dialog
    aria-label=Guides
    class=_button _button--primary _button--sm _button--ghost _popover-trigger
    data-ods=popover-trigger
    data-part=trigger
    data-scope=popover
    data-state=closed
    dir=ltr
    id=popover::r6::trigger
    role=button
    tabindex=0
    type=button
  >
    <span
      aria-hidden=true
      class=_icon _icon--book
      data-ods=icon
      role=presentation
    />
    Guides
  </button>
</div>
`;
